--- a/css/master.css
+++ b/css/master.css
@@ -237,7 +237,7 @@ section.mailinglist ul.social li a {
 
 .jumbotron .row a.article-link {
   text-decoration:none;
-  color:#F06161;
+  color:#F38181;
 }
 
 .jumbotron .row a.article-link:hover {
